[package]
name = "supabase-storage"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Spears"]
description = "A api client for Supabase Storage"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cautoio/storage-rs"


[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.11.24" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"